// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Splitter should let only members and admin withdraw 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Withdraw",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBR0KWyao8i8wEuP4v5RguceCxMzKfA50OXlrnZKr4-4yrY",
      "to": "kQD_nbFCT5l_uffqhOr1BnXqjSVNgpgW8Ga7OTauiS0C2U9V",
      "type": "internal",
      "value": 1200000000n,
    },
    "type": "received",
  },
  {
    "errorCode": 16466,
    "type": "failed",
  },
  {
    "message": {
      "body": {
        "type": "empty",
      },
      "bounce": false,
      "from": "kQD_nbFCT5l_uffqhOr1BnXqjSVNgpgW8Ga7OTauiS0C2U9V",
      "to": "kQBR0KWyao8i8wEuP4v5RguceCxMzKfA50OXlrnZKr4-4yrY",
      "type": "internal",
      "value": 1192762000n,
    },
    "type": "sent-bounced",
  },
]
`;

exports[`Splitter should let only members and admin withdraw 2`] = `
[
  {
    "message": {
      "body": {
        "text": "Withdraw",
        "type": "text",
      },
      "bounce": true,
      "from": "kQAddWGzDY_nU13IVl-JpWBXFuB0fGk8wV8I75kLpljvMqxE",
      "to": "kQD_nbFCT5l_uffqhOr1BnXqjSVNgpgW8Ga7OTauiS0C2U9V",
      "type": "internal",
      "value": 1200000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 13372n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "cell": "x{DA803EFD4E848C973758AB7043B9ACA000}",
          "type": "cell",
        },
        "bounce": false,
        "from": "kQD_nbFCT5l_uffqhOr1BnXqjSVNgpgW8Ga7OTauiS0C2U9V",
        "to": "kQC3OBC-eWfUrnx1Yp6h6sOj779mNY3u3bK4idWfAdFVe7sB",
        "type": "internal",
        "value": 200000000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`Splitter should let only members and admin withdraw 3`] = `
[
  {
    "message": {
      "body": {
        "text": "Withdraw",
        "type": "text",
      },
      "bounce": true,
      "from": "kQCSi8fIJH0YiDmgUQ7UTYGIeiLjXq0NN3oDDdznGOn3I03k",
      "to": "kQD_nbFCT5l_uffqhOr1BnXqjSVNgpgW8Ga7OTauiS0C2U9V",
      "type": "internal",
      "value": 1200000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 13446n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "cell": "x{DA803EFD9225D108166BD8CC43B9ACA000}",
          "type": "cell",
        },
        "bounce": false,
        "from": "kQD_nbFCT5l_uffqhOr1BnXqjSVNgpgW8Ga7OTauiS0C2U9V",
        "to": "kQC3OBC-eWfUrnx1Yp6h6sOj779mNY3u3bK4idWfAdFVe7sB",
        "type": "internal",
        "value": 200000000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`Splitter should split if withdraw delayed 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "cell": "x{74BB342700000000000000E4}",
        "type": "cell",
      },
      "bounce": false,
      "from": "kQC3OBC-eWfUrnx1Yp6h6sOj779mNY3u3bK4idWfAdFVe7sB",
      "to": "kQAQUQRWN2f1Dg5lycdymlpECWsWQg-WTvV8gVxnmcKgn2xQ",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 77532n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQAQUQRWN2f1Dg5lycdymlpECWsWQg-WTvV8gVxnmcKgn2xQ",
        "to": "kQABTCJQINMOMK9EDPnEZcDqDqJplijCq6QE7qeQaU4blSwM",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQAQUQRWN2f1Dg5lycdymlpECWsWQg-WTvV8gVxnmcKgn2xQ",
        "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQAQUQRWN2f1Dg5lycdymlpECWsWQg-WTvV8gVxnmcKgn2xQ",
        "to": "kQCVnZ1On-Ja4xfAfMbsq--jatb5sNnOUN421AHaXbebcCWH",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`Splitter should split if zero balance 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "cell": "x{23D421E100000000000000E4}",
        "type": "cell",
      },
      "bounce": false,
      "from": "kQC3OBC-eWfUrnx1Yp6h6sOj779mNY3u3bK4idWfAdFVe7sB",
      "to": "kQAQUQRWN2f1Dg5lycdymlpECWsWQg-WTvV8gVxnmcKgn2xQ",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 77540n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQAQUQRWN2f1Dg5lycdymlpECWsWQg-WTvV8gVxnmcKgn2xQ",
        "to": "kQABTCJQINMOMK9EDPnEZcDqDqJplijCq6QE7qeQaU4blSwM",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQAQUQRWN2f1Dg5lycdymlpECWsWQg-WTvV8gVxnmcKgn2xQ",
        "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQAQUQRWN2f1Dg5lycdymlpECWsWQg-WTvV8gVxnmcKgn2xQ",
        "to": "kQCVnZ1On-Ja4xfAfMbsq--jatb5sNnOUN421AHaXbebcCWH",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`Splitter should split revenue correctly 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Gift",
        "type": "text",
      },
      "bounce": true,
      "from": "kQC3OBC-eWfUrnx1Yp6h6sOj779mNY3u3bK4idWfAdFVe7sB",
      "to": "kQBGGqhORfafzJLVcL2UaT5i6HzVLGCVt_dKIcEaA7oRcsnj",
      "type": "internal",
      "value": 2100000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 54339n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/2 of 2 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQBGGqhORfafzJLVcL2UaT5i6HzVLGCVt_dKIcEaA7oRcsnj",
        "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
        "type": "internal",
        "value": 998620000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/2 of 2 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQBGGqhORfafzJLVcL2UaT5i6HzVLGCVt_dKIcEaA7oRcsnj",
        "to": "kQCVnZ1On-Ja4xfAfMbsq--jatb5sNnOUN421AHaXbebcCWH",
        "type": "internal",
        "value": 998620000n,
      },
    ],
    "type": "sent",
  },
]
`;
